--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-native-chart-kit": "^5.6.1",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-paper": "^3.10.1",
+    "react-native-pdf": "^6.1.2",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.5",
     "react-native-screens": "^2.8.0",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^6.6.0",
     "rn-fetch-blob": "^0.12.0",
     "save": "^2.4.0"
