--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "-": "0.0.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^7.2.1",
+    "@react-native-firebase/auth": "^8.0.5",
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
